--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,23 +5,25 @@ services:
     restart: always
     ports:
       - "27017:27017" 
+    networks:
+      - my_network
     env_file:
       - ./Env/Mongo/.env
     volumes:
       - mongo_data:/data/db
   node:
-    image: node:latest
     container_name: node-app
     restart: always
+    build:
+      context: ./
+      target: ${ENVIRONMENT}
+    networks:
+      - my_network
     ports:
       - "3000:3000" 
     working_dir: /usr/src/app
     volumes:
       - ./app:/usr/src/app 
-      - ./package-lock.json:/usr/src/app
-      - ./package.json:/usr/src/app 
-      - /usr/src/app/node_modules # Evita que `node_modules` do container sobrescreva o local
-    command: "npm run start" 
     depends_on:
       - mongo
     env_file:
@@ -29,6 +31,9 @@ services:
     # acessar container node
     # docker exec -it node-app sh
 
+networks:
+  my_network:
+    driver: bridge
 volumes:
   mongo_data:
     driver: local
